--- a/sass/_adding-product.scss
+++ b/sass/_adding-product.scss
@@ -32,11 +32,15 @@ $Cunia-family: "Cunia", sans-serif;
 .adding-input {
   width: 100%;
 }
+.adding-input:focus {
+  border: 2px solid #00317d;
+  box-shadow: 0 0 5px black;
+}
 
 .photo-pick {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  gap: 10px;
 }
 //Categories
 
@@ -51,8 +55,8 @@ $Cunia-family: "Cunia", sans-serif;
 }
 
 .categories {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 4fr 1fr;
   gap: 20px;
   & > span {
     font-size: 24px;
@@ -72,7 +76,7 @@ $Cunia-family: "Cunia", sans-serif;
   border: 2px solid #00317d;
 }
 #checkbox.clicked {
-  border-width: 7px;
+  border: 7px solid #00317d;
 }
 
 #save {
@@ -91,7 +95,7 @@ $Cunia-family: "Cunia", sans-serif;
 @media screen and (max-width: 1200px) {
   .custom-main {
     grid-template-columns: 50% 5% 40%;
-    margin: 140px 0 130px 0;
+    margin: 140px 0 0px 0;
   }
 
   .product-category > h3 {
@@ -118,7 +122,7 @@ $Cunia-family: "Cunia", sans-serif;
 @media screen and (max-width: 992px) {
   .custom-main {
     grid-template-columns: 50% 5% 45%;
-    margin: 120px 0 110px 0;
+    margin: 120px 0 0px 0;
   }
 
   .product-category > h3 {
