--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -22,6 +22,8 @@ h2 {
 
 header {
   box-shadow: 0 5px 20px $black;
+  transform: translateY(-150px);
+  animation: headerShow 0.6s linear 1 forwards;
 }
 
 .header-elem {
@@ -42,6 +44,8 @@ header {
   }
   &__btn {
     position: relative;
+    display: flex;
+    gap: 2px;
     align-items: center;
     padding: 20px 22px;
     border-radius: 60px;
@@ -112,7 +116,7 @@ header {
 //FOOTER
 
 footer {
-  position: relative;
+  position: absolute;
   overflow: hidden;
   margin-top: -300px;
   display: flex;
@@ -176,6 +180,14 @@ footer {
     font-size: 24px;
     font-family: $font-family;
     color: $white;
+  }
+}
+
+// HEADER ANIMATION-------//
+
+@keyframes headerShow {
+  to {
+    transform: translateY(0px);
   }
 }
 
