--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,34 +48,59 @@ body {
 }
 
 .what-v-do {
-  padding-top: 210px;
+  padding-top: 140px;
   position: absolute;
+  overflow: hidden;
   z-index: 2;
   & > span {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 10px;
+    filter: blur(8px);
+    transform: translateY(320px);
+    animation: animaWhatWDo 0.5s linear 1 forwards;
+    animation-delay: 0.6s;
   }
   &__line {
     width: 50px;
     height: 4px;
     border-radius: 2px;
     background: $gradient;
+    filter: blur(8px);
+    transform: translateY(320px);
+    animation: animaWhatWDo 0.5s linear 1 forwards;
+    animation-delay: 0.7s;
   }
   & > span > h3 {
     font-size: 32px;
     font-weight: 500;
     font-family: $font-family;
+    filter: blur(8px);
+    transform: translateY(320px);
+    animation: animaWhatWDo 0.5s linear 1 forwards;
+    animation-delay: 0.8s;
   }
-  & > span > h3 > span {
+  & > span > span {
     background: linear-gradient(to bottom, #17bff0, #00317d);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+    font-size: 32px;
+    font-weight: 500;
+    font-family: $font-family;
+    filter: blur(8px);
+    transform: translateY(320px);
+    animation: animaWhatWDo 0.5s linear 1 forwards;
+    animation-delay: 0.9s;
   }
   & > h1 {
     font-size: 64px;
+    width: 60%;
+    filter: blur(20px);
+    transform: translateY(350px);
+    animation: animaWhatWDo 0.5s linear 1 forwards;
+    animation-delay: 1s;
   }
   & > p {
     margin-top: 35px;
@@ -85,6 +110,10 @@ body {
     width: 738px;
     line-height: 29px;
     color: $lightblack;
+    filter: blur(8px);
+    transform: translateY(320px);
+    animation: animaWhatWDo 0.5s linear 1 forwards;
+    animation-delay: 1.1s;
   }
   &__elements {
     margin-top: 32px;
@@ -92,6 +121,10 @@ body {
     flex-direction: row;
     align-items: center;
     gap: 50px;
+    filter: blur(8px);
+    transform: translateY(320px);
+    animation: animaWhatWDo 0.5s linear 1 forwards;
+    animation-delay: 1.2s;
   }
 
   &__btn {
@@ -118,6 +151,7 @@ body {
     display: flex;
     align-items: center;
     gap: 20px;
+
     & > img {
       height: 48px;
       width: 48px;
@@ -141,6 +175,14 @@ body {
   }
 }
 
+// animation what-w-do--------------------
+@keyframes animaWhatWDo {
+  to {
+    filter: blur(0);
+    transform: translateY(0);
+  }
+}
+
 .what-v-do2 {
   position: relative;
   background: transparent;
@@ -149,9 +191,12 @@ body {
     display: flex;
     flex-direction: row;
     gap: 100px;
+    overflow: hidden;
     & > img {
       width: 413px;
       height: 543px;
+      animation: showTwo 0.7s linear 1 forwards;
+      transform: translateX(100%);
     }
   }
 
@@ -165,12 +210,18 @@ body {
       font-family: $Cunia-family;
       font-weight: 700;
       color: $white;
+
+      transform: translateX(-100%);
+      animation: showTwo 1.5s linear 1 forwards;
     }
     & > h3 {
       font-size: 40px;
       font-weight: 700;
       font-family: $font-family;
       color: $white;
+
+      transform: translateX(-100%);
+      animation: showTwo 0.9s linear 1 forwards;
     }
     & > p {
       font-size: 32px;
@@ -178,7 +229,16 @@ body {
       font-weight: 500;
       width: 738px;
       color: $white;
+
+      transform: translateX(-100%);
+      animation: showTwo 0.5s linear 1 forwards;
     }
+  }
+}
+
+@keyframes showTwo {
+  to {
+    transform: translateX(0px);
   }
 }
 
@@ -196,7 +256,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: url(/images/back-images/union.svg) no-repeat center;
+  background: url(../images/back-images/union.svg) no-repeat center;
   background-size: cover;
 }
 
@@ -347,7 +407,7 @@ body {
     & > div {
       display: flex;
       flex-direction: column;
-      gap: 30px;
+      gap: 20px;
     }
   }
   &__labels {
@@ -409,6 +469,35 @@ body {
   display: block;
   margin-top: 10px;
   font-size: 16px;
+}
+
+//404-page
+.err-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 150px;
+  gap: 20px;
+  & > span {
+    font-size: 24px;
+    font-family: $font-family;
+  }
+}
+
+.go-home {
+  font-size: 24px;
+  border: 2px solid #00317d;
+  color: #00317d;
+  border-radius: 50px;
+  padding: 5px 20px;
+  font-family: $Cunia-family;
+  transition: 0.4s;
+}
+.go-home:hover {
+  color: #ffffff;
+  background-color: #00317d;
+  box-shadow: 0 0 5px black;
 }
 
 //----------------MEDIA--------------//
