--- a/css/style.css
+++ b/css/style.css
@@ -2043,7 +2043,7 @@ body {
   width: 413px;
   height: 543px;
   animation: showTwo 0.7s linear 1 forwards;
-  transform: translateX(100%);
+  transform: translateX(150%);
 }
 .what-v-do2__text {
   display: flex;
@@ -2106,6 +2106,7 @@ body {
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
 }
 .fast-way__text {
   display: flex;
@@ -2116,6 +2117,9 @@ body {
   color: #000;
   font-size: 54px;
   font-weight: 700;
+  filter: blur(10px);
+  transform: translateX(100%);
+  animation: fastShow 0.7s linear 1 forwards;
 }
 .fast-way__text > h2 > span {
   background: linear-gradient(to left, #17bff0, #00317d);
@@ -2128,8 +2132,23 @@ body {
   width: 700px;
   height: 739px;
   padding-top: 0px;
+  filter: blur(10px);
+  transform: translateY(100%);
+  animation: listDude 0.7s linear 1 forwards;
 }
 
+@keyframes fastShow {
+  to {
+    transform: translateX(0);
+    filter: blur(0px);
+  }
+}
+@keyframes listDude {
+  to {
+    transform: translateY(0);
+    filter: blur(0px);
+  }
+}
 .our-mission {
   padding-top: 170px;
   position: relative;
