--- a/sass/_adding-product.scss
+++ b/sass/_adding-product.scss
@@ -1,6 +1,6 @@
 $font-family: "Montserrat", sans-serif;
 $second-family: "Inter", sans-serif;
-$Cunia-family: "Cunia", sans-serif;
+// $Cunia-family: "Cunia", sans-serif;
 
 .container {
   max-width: 1420px;
@@ -27,6 +27,7 @@ $Cunia-family: "Cunia", sans-serif;
 
 .adding-label {
   font-weight: 500;
+  font-family: "Montserrat", sans-serif;
 }
 
 .adding-input {
