--- a/sass/_seller-edit.scss
+++ b/sass/_seller-edit.scss
@@ -3,7 +3,7 @@
 // fonts
 $font-family: "Montserrat", sans-serif;
 $second-family: "Inter", sans-serif;
-$Cunia-family: "Cunia", sans-serif;
+// $Cunia-family: "Cunia", sans-serif;
 
 .seller-profile {
   margin-top: 75px;
