--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
+input {
+  font-family: "Montserrat", sans-serif;
+  background-color: white;
+}
+
+input::placeholder {
+  font-family: "Montserrat", sans-serif;
+}
+
 h1 {
-  font-family: "Cunia", sans-serif;
   color: #00317d;
 }
 
 h2 {
-  font-family: "Cunia", sans-serif;
   font-size: 64px;
   font-weight: 700;
 }
@@ -99,6 +106,10 @@ header {
   font-size: 24px;
   color: #000;
   font-family: "Montserrat", sans-serif;
+}
+
+.fa-solid {
+  margin-right: 10px;
 }
 
 footer {
@@ -451,6 +462,7 @@ footer {
   font-size: 40px;
   text-align: center;
   font-weight: 700;
+  width: 80%;
   font-family: "Montserrat", sans-serif;
   border: none;
   color: white;
@@ -460,6 +472,7 @@ footer {
 }
 
 .input-box {
+  width: 80%;
   display: flex;
   flex-direction: column;
 }
@@ -486,11 +499,12 @@ footer {
 
 .two-elements {
   display: flex;
+  width: 100%;
   flex-direction: row;
-  gap: 10px;
+  justify-content: space-between;
 }
 .two-elements > button {
-  width: 50%;
+  width: 40%;
   font-size: 24px;
   grid-column: 2;
   font-family: "Montserrat", sans-serif;
@@ -521,7 +535,8 @@ footer {
 }
 
 .login_buttons {
-  width: 90%;
+  width: 100%;
+  justify-content: center;
   display: flex;
   flex-direction: row;
   gap: 20px;
@@ -534,11 +549,13 @@ footer {
 
 .login_box {
   width: 100%;
+  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
 .login_box > h2 {
+  text-align: start;
   font-size: 40px;
   font-weight: 700;
 }
@@ -607,6 +624,7 @@ footer {
 
 .forgot-password-input {
   display: flex;
+  width: 80%;
   flex-direction: column;
 }
 .forgot-password-input_set-up-account {
@@ -652,7 +670,7 @@ footer {
   align-items: center;
   border-radius: 10px;
   font-size: 24px;
-  padding: 0 35px 0 15px;
+  background-color: white;
   border: 2px solid #00317d;
   margin-bottom: 18px;
 }
@@ -663,7 +681,6 @@ footer {
 }
 .inp > input {
   width: 100%;
-  background: transparent;
   border: none;
 }
 
@@ -689,6 +706,9 @@ footer {
   .main-create-acc {
     grid-template-columns: 1fr 2fr;
     padding-right: 140px;
+  }
+  .input-box {
+    width: 100%;
   }
   .create-acc {
     width: 100%;
@@ -781,13 +801,20 @@ footer {
     font-size: 16px;
   }
 }
+input {
+  font-family: "Montserrat", sans-serif;
+  background-color: white;
+}
+
+input::placeholder {
+  font-family: "Montserrat", sans-serif;
+}
+
 h1 {
-  font-family: "Cunia", sans-serif;
   color: #00317d;
 }
 
 h2 {
-  font-family: "Cunia", sans-serif;
   font-size: 64px;
   font-weight: 700;
 }
@@ -882,6 +909,10 @@ header {
   font-size: 24px;
   color: #000;
   font-family: "Montserrat", sans-serif;
+}
+
+.fa-solid {
+  margin-right: 10px;
 }
 
 footer {
@@ -1226,13 +1257,20 @@ input:focus {
   font-weight: 400;
 }
 
+input {
+  font-family: "Montserrat", sans-serif;
+  background-color: white;
+}
+
+input::placeholder {
+  font-family: "Montserrat", sans-serif;
+}
+
 h1 {
-  font-family: "Cunia", sans-serif;
   color: #00317d;
 }
 
 h2 {
-  font-family: "Cunia", sans-serif;
   font-size: 64px;
   font-weight: 700;
 }
@@ -1327,6 +1365,10 @@ header {
   font-size: 24px;
   color: #000;
   font-family: "Montserrat", sans-serif;
+}
+
+.fa-solid {
+  margin-right: 10px;
 }
 
 footer {
@@ -1691,6 +1733,7 @@ footer {
 
 .adding-label {
   font-weight: 500;
+  font-family: "Montserrat", sans-serif;
 }
 
 .adding-input {
@@ -1863,6 +1906,10 @@ footer {
     padding: 5px 0px;
   }
 }
+@font-face {
+  font-family: "Cunia", sans-serif;
+  src: url("fonts/Cunia.otf") format("opentype");
+}
 h1 {
   font-family: "Cunia", sans-serif;
   color: #00317d;
@@ -1911,7 +1958,7 @@ body {
   filter: blur(8px);
   transform: translateY(320px);
   animation: animaWhatWDo 0.5s linear 1 forwards;
-  animation-delay: 0.6s;
+  animation-delay: 0.5s;
 }
 .what-v-do__line {
   width: 50px;
@@ -1921,7 +1968,7 @@ body {
   filter: blur(8px);
   transform: translateY(320px);
   animation: animaWhatWDo 0.5s linear 1 forwards;
-  animation-delay: 0.7s;
+  animation-delay: 0.5s;
 }
 .what-v-do > span > h3 {
   font-size: 32px;
@@ -1930,7 +1977,7 @@ body {
   filter: blur(8px);
   transform: translateY(320px);
   animation: animaWhatWDo 0.5s linear 1 forwards;
-  animation-delay: 0.8s;
+  animation-delay: 0.6s;
 }
 .what-v-do > span > span {
   background: linear-gradient(to bottom, #17bff0, #00317d);
@@ -1943,15 +1990,15 @@ body {
   filter: blur(8px);
   transform: translateY(320px);
   animation: animaWhatWDo 0.5s linear 1 forwards;
-  animation-delay: 0.9s;
+  animation-delay: 0.7s;
 }
 .what-v-do > h1 {
   font-size: 64px;
-  width: 60%;
+  width: 70%;
   filter: blur(20px);
   transform: translateY(350px);
   animation: animaWhatWDo 0.5s linear 1 forwards;
-  animation-delay: 1s;
+  animation-delay: 0.8s;
 }
 .what-v-do > p {
   margin-top: 35px;
@@ -1964,7 +2011,7 @@ body {
   filter: blur(8px);
   transform: translateY(320px);
   animation: animaWhatWDo 0.5s linear 1 forwards;
-  animation-delay: 1.1s;
+  animation-delay: 0.9s;
 }
 .what-v-do__elements {
   margin-top: 32px;
@@ -1975,7 +2022,7 @@ body {
   filter: blur(8px);
   transform: translateY(320px);
   animation: animaWhatWDo 0.5s linear 1 forwards;
-  animation-delay: 1.2s;
+  animation-delay: 1s;
 }
 .what-v-do__btn {
   align-items: center;
@@ -2046,9 +2093,10 @@ body {
   transform: translateX(150%);
 }
 .what-v-do2__text {
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 40px;
 }
 .what-v-do2__text > h2 {
   font-size: 64px;
@@ -2258,6 +2306,7 @@ body {
   display: grid;
   grid-template-columns: 500px 500px;
   align-items: flex-end;
+  font-family: "Montserrat", sans-serif;
   margin-top: 85px;
   width: 90%;
 }
@@ -2363,10 +2412,10 @@ body {
     padding-top: 50px;
     align-items: center;
     justify-content: space-between;
-    gap: 50px;
+    gap: 30px;
   }
   .what-v-do2__text {
-    gap: 20px;
+    gap: 30px;
   }
 }
 @media (max-width: 1720px) {
@@ -2502,6 +2551,7 @@ body {
     font-size: 24px;
   }
   .what-v-do > h1 {
+    font-family: "Cunia", sans-serif;
     font-size: 51px;
   }
   .what-v-do > p {
