--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,13 +9,23 @@ $white: #ffffff;
 // fonts
 $font-family: "Montserrat", sans-serif;
 $second-family: "Inter", sans-serif;
-$Cunia-family: "Cunia", sans-serif;
+// $Cunia-family: "Cunia", sans-serif;
+
+input {
+  font-family: $font-family;
+  background-color: white;
+}
+
+input::placeholder {
+  font-family: $font-family;
+}
+
 h1 {
-  font-family: $Cunia-family;
+  // font-family: $Cunia-family;
   color: $darkblue;
 }
 h2 {
-  font-family: $Cunia-family;
+  // font-family: $Cunia-family;
   font-size: 64px;
   font-weight: 700;
 }
@@ -111,6 +121,12 @@ header {
     color: #000;
     font-family: $font-family;
   }
+}
+
+// FASOLIDS
+
+.fa-solid {
+  margin-right: 10px;
 }
 
 //FOOTER
