--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,9 +9,14 @@ $oceanblue: #17bff0;
 $black: #000;
 $lightblack: #555555;
 $gradient: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+
 $white: #ffffff;
 
 // fonts
+@font-face {
+  font-family: "Cunia", sans-serif;
+  src: url("fonts/Cunia.otf") format("opentype");
+}
 $font-family: "Montserrat", sans-serif;
 $second-family: "Inter", sans-serif;
 $Cunia-family: "Cunia", sans-serif;
@@ -60,7 +65,7 @@ body {
     filter: blur(8px);
     transform: translateY(320px);
     animation: animaWhatWDo 0.5s linear 1 forwards;
-    animation-delay: 0.6s;
+    animation-delay: 0.5s;
   }
   &__line {
     width: 50px;
@@ -70,7 +75,7 @@ body {
     filter: blur(8px);
     transform: translateY(320px);
     animation: animaWhatWDo 0.5s linear 1 forwards;
-    animation-delay: 0.7s;
+    animation-delay: 0.5s;
   }
   & > span > h3 {
     font-size: 32px;
@@ -79,7 +84,7 @@ body {
     filter: blur(8px);
     transform: translateY(320px);
     animation: animaWhatWDo 0.5s linear 1 forwards;
-    animation-delay: 0.8s;
+    animation-delay: 0.6s;
   }
   & > span > span {
     background: linear-gradient(to bottom, #17bff0, #00317d);
@@ -92,15 +97,15 @@ body {
     filter: blur(8px);
     transform: translateY(320px);
     animation: animaWhatWDo 0.5s linear 1 forwards;
-    animation-delay: 0.9s;
+    animation-delay: 0.7s;
   }
   & > h1 {
     font-size: 64px;
-    width: 60%;
+    width: 70%;
     filter: blur(20px);
     transform: translateY(350px);
     animation: animaWhatWDo 0.5s linear 1 forwards;
-    animation-delay: 1s;
+    animation-delay: 0.8s;
   }
   & > p {
     margin-top: 35px;
@@ -113,7 +118,7 @@ body {
     filter: blur(8px);
     transform: translateY(320px);
     animation: animaWhatWDo 0.5s linear 1 forwards;
-    animation-delay: 1.1s;
+    animation-delay: 0.9s;
   }
   &__elements {
     margin-top: 32px;
@@ -124,7 +129,7 @@ body {
     filter: blur(8px);
     transform: translateY(320px);
     animation: animaWhatWDo 0.5s linear 1 forwards;
-    animation-delay: 1.2s;
+    animation-delay: 1s;
   }
 
   &__btn {
@@ -201,9 +206,10 @@ body {
   }
 
   &__text {
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 40px;
 
     & > h2 {
       font-size: 64px;
@@ -422,6 +428,7 @@ body {
     display: grid;
     grid-template-columns: 500px 500px;
     align-items: flex-end;
+    font-family: $font-family;
     margin-top: 85px;
     width: 90%;
     & > div {
@@ -529,11 +536,11 @@ body {
       padding-top: 50px;
       align-items: center;
       justify-content: space-between;
-      gap: 50px;
+      gap: 30px;
     }
 
     &__text {
-      gap: 20px;
+      gap: 30px;
     }
   }
 }
@@ -701,6 +708,7 @@ body {
       font-size: 24px;
     }
     & > h1 {
+      font-family: $Cunia-family;
       font-size: 51px;
     }
     & > p {
