--- a/sass/_create-account.scss
+++ b/sass/_create-account.scss
@@ -148,7 +148,7 @@ $Cunia-family: "Cunia", sans-serif;
 
 .btn-creat-acc {
   padding: 10px 15px;
-  font-size: 40px;
+  font-size: 32px;
   text-align: center;
   font-weight: 700;
   font-family: $font-family;
@@ -283,7 +283,7 @@ $Cunia-family: "Cunia", sans-serif;
 
 .btn-sign-in {
   padding: 10px 15px;
-  font-size: 40px;
+  font-size: 32px;
   width: 80%;
   text-align: center;
   font-weight: 700;
@@ -382,12 +382,12 @@ $Cunia-family: "Cunia", sans-serif;
 }
 
 .error-icon {
-  margin-left: -6px;
+  margin-left: 6px;
   color: red;
 }
 
 .success-icon {
-  margin-left: -6px;
+  margin-left: 6px;
   color: rgb(8, 148, 8);
 }
 
@@ -398,43 +398,36 @@ $Cunia-family: "Cunia", sans-serif;
   width: 100%;
   font-size: 24px;
   background-color: white;
-  border: 2px solid $darkblue;
 
   margin-bottom: 18px;
   &::placeholder {
     color: $lightblack;
     text-align: center;
-
     font-size: 24px;
   }
   & > input {
     width: 100%;
-
-    border: none;
+    border: 2px solid rgb(155, 155, 155);
+    &:focus {
+      border: 2px solid #00317d;
+    }
   }
 }
 
 .email-verification {
-  display: flex;
-  align-items: center;
-  border-radius: 10px;
-  font-size: 24px;
-  padding: 0 35px 0 15px;
-  border: 2px solid $darkblue;
-  &::placeholder {
-    color: $lightblack;
-    text-align: center;
-    font-size: 24px;
-  }
   & > input {
     width: 100%;
-    border: none;
+    border: 2px solid rgb(155, 155, 155);
+
+    &:focus {
+      border: 2px solid #00317d;
+    }
   }
 }
 
 .f-btn-creat-acc {
   padding: 10px 15px;
-  font-size: 40px;
+  font-size: 32px;
   text-align: center;
 
   font-weight: 700;
