--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -55,18 +55,22 @@ header {
   &__btn {
     position: relative;
     display: flex;
-    gap: 2px;
+    gap: 10px;
+    flex-direction: row;
     align-items: center;
-    padding: 20px 22px;
+    padding: 0px 22px;
     border-radius: 60px;
     border: 2px solid $darkblue;
-    font-size: 24px;
+    font-size: 32px;
     font-weight: 400;
     font-family: $font-family;
     color: $darkblue;
     background: transparent;
     overflow: hidden;
     transition: background-color 0.3s, color 0.3s;
+    & > span {
+      font-size: 24px;
+    }
   }
   &__btn:hover {
     color: white;
@@ -123,11 +127,57 @@ header {
   }
 }
 
-// FASOLIDS
-
-.fa-solid {
-  margin-right: 10px;
+.two-buttons {
+  display: flex;
+  gap: 10px;
 }
+
+.translate-btn {
+  padding: 15px 16px;
+  position: relative;
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 60px;
+  border: 2px solid $darkblue;
+  font-size: 24px;
+  font-weight: 400;
+  font-family: $font-family;
+  color: $darkblue;
+  background: transparent;
+  overflow: hidden;
+  transition: background-color 0.3s, color 0.3s;
+}
+.translate-btn:hover {
+  color: white;
+}
+.translate-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  left: unset;
+  right: 0;
+  border-radius: 60px;
+  width: 0%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+  transition: 0.4s all ease-in-out 0s;
+}
+
+.translate-btn:hover::before {
+  left: 0;
+  right: unset;
+  width: 100%;
+}
+
+.bx {
+  padding: 15px 0px;
+  font-size: 32px;
+}
+// FASOLIDS
 
 //FOOTER
 
@@ -207,9 +257,24 @@ footer {
   }
 }
 
+@media (max-width: 1370px) {
+  .header-elem {
+    height: 130px;
+    &__btn {
+      font-size: 19px;
+      & > span {
+        font-size: 19px;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 1200px) {
   .header-elem {
     height: 130px;
+    &__btn {
+      font-size: 19px;
+    }
   }
 
   .header-elem__logo > img {
@@ -219,7 +284,7 @@ footer {
 
   .header-elem__btn {
     font-size: 22px;
-    padding: 18px 20px;
+    padding: 0px 20px;
   }
 
   .company {
