--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h2 {
 }
 
 header {
-  box-shadow: 0 5px 20px #000;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.226);
   transform: translateY(-150px);
   animation: headerShow 0.6s linear 1 forwards;
 }
@@ -284,9 +284,6 @@ footer {
   .footer-elements > div > span > a {
     font-size: 22px;
   }
-  .footer-elements > h5 {
-    font-size: 22px;
-  }
 }
 @media screen and (max-width: 992px) {
   .header-elem {
@@ -323,9 +320,6 @@ footer {
     font-size: 32px;
   }
   .footer-elements > div > span > a {
-    font-size: 20px;
-  }
-  .footer-elements > h5 {
     font-size: 20px;
   }
 }
@@ -927,7 +921,7 @@ h2 {
 }
 
 header {
-  box-shadow: 0 5px 20px #000;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.226);
   transform: translateY(-150px);
   animation: headerShow 0.6s linear 1 forwards;
 }
@@ -1194,9 +1188,6 @@ footer {
   .footer-elements > div > span > a {
     font-size: 22px;
   }
-  .footer-elements > h5 {
-    font-size: 22px;
-  }
 }
 @media screen and (max-width: 992px) {
   .header-elem {
@@ -1233,9 +1224,6 @@ footer {
     font-size: 32px;
   }
   .footer-elements > div > span > a {
-    font-size: 20px;
-  }
-  .footer-elements > h5 {
     font-size: 20px;
   }
 }
@@ -1485,7 +1473,7 @@ h2 {
 }
 
 header {
-  box-shadow: 0 5px 20px #000;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.226);
   transform: translateY(-150px);
   animation: headerShow 0.6s linear 1 forwards;
 }
@@ -1752,9 +1740,6 @@ footer {
   .footer-elements > div > span > a {
     font-size: 22px;
   }
-  .footer-elements > h5 {
-    font-size: 22px;
-  }
 }
 @media screen and (max-width: 992px) {
   .header-elem {
@@ -1791,9 +1776,6 @@ footer {
     font-size: 32px;
   }
   .footer-elements > div > span > a {
-    font-size: 20px;
-  }
-  .footer-elements > h5 {
     font-size: 20px;
   }
 }
@@ -1857,22 +1839,33 @@ footer {
   }
 }
 .seller-profile {
-  margin-top: 75px;
-  flex-direction: column;
+  max-width: 1420px;
+  margin: auto;
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 50px;
 }
+.seller-profile > div {
+  width: 80%;
+  margin-bottom: 250px;
+}
+.seller-profile > div > div {
+  display: flex;
+  justify-content: center;
+}
 
 .add-items {
+  margin-top: 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 2px solid #00317d;
   border-radius: 20px;
   width: 413px;
-  padding: 15px 77px;
+  padding: 15px 0px;
   gap: 20px;
+  margin-bottom: 100px;
 }
 .add-items > img {
   width: 90px;
@@ -1886,6 +1879,10 @@ footer {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+}
+
+.product-image {
+  object-fit: fill;
 }
 
 .active-items > h3 {
@@ -1904,20 +1901,21 @@ footer {
 
 .items-card {
   display: flex;
+  box-shadow: 0 0px 15px #6b6b6b;
+  width: 100%;
+  border-radius: 17px;
 }
 
 .items-info {
   display: flex;
+  width: 100%;
+  gap: 10px;
   flex-direction: row;
-  border: 2px solid #00317d;
-  border-radius: 17px;
-}
-.items-info > img {
-  padding: 15px;
 }
 
 .items-details {
   display: flex;
+  width: 100%;
   flex-direction: column;
   padding: 15px 0px;
 }
@@ -1929,8 +1927,6 @@ footer {
 
 .item-details_box {
   padding: 30px 10px 20px 0px;
-  width: 360px;
-  height: 234px;
 }
 .item-details_box > p {
   display: flex;
@@ -1953,7 +1949,7 @@ footer {
   align-items: center;
   gap: 20px;
   padding-inline: 10px;
-  width: 100%;
+  width: 15%;
 }
 .items-btn > button {
   padding: 15px 20px;
@@ -1964,6 +1960,10 @@ footer {
 }
 
 #edit {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  align-items: center;
   background: linear-gradient(to bottom, #17bff0, #00317d);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -1981,11 +1981,48 @@ footer {
 }
 
 #delete {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
   background: red;
   border: none;
+  cursor: pointer;
 }
 
+@media (max-width: 1720px) {
+  .seller-profile > div {
+    margin-bottom: 100px;
+  }
+  .add-items {
+    margin-bottom: 50px;
+  }
+  .add-items > img {
+    width: 80px;
+    height: 80px;
+  }
+  .add-items > p {
+    font-size: 24px;
+  }
+  .active-items > h3 {
+    font-size: 32px;
+  }
+  .items-details {
+    padding: 10px 0px;
+  }
+  #edit,
+  #delete {
+    font-size: 20px;
+    gap: 2px;
+  }
+  #edit > i,
+  #delete > i {
+    font-size: 20px;
+  }
+  .items-btn > button {
+    padding: 5px;
+  }
+}
 .container {
   max-width: 1420px;
   margin: auto;
@@ -1994,7 +2031,7 @@ footer {
 .custom-main {
   display: grid;
   grid-template-columns: 60% 5% 40%;
-  margin: 168px 0 150px 0;
+  margin: 168px 0 250px 0;
 }
 
 .adding-product {
@@ -2014,11 +2051,11 @@ footer {
 
 .adding-input {
   width: 100%;
+  border: 2px solid rgb(180, 180, 180);
 }
 
 .adding-input:focus {
   border: 2px solid #00317d;
-  box-shadow: 0 0 5px black;
 }
 
 .photo-pick {
@@ -2051,6 +2088,10 @@ footer {
   justify-content: space-between;
 }
 
+.inactive {
+  color: rgb(180, 180, 180);
+}
+
 #checkbox {
   cursor: pointer;
   height: 20px;
@@ -2076,26 +2117,33 @@ footer {
   cursor: pointer;
 }
 
+@media (max-width: 1720px) {
+  .custom-main {
+    margin: 140px 0 150px 0;
+  }
+  .adding-label {
+    font-size: 24px;
+  }
+  .product-category > h3 {
+    font-size: 24px;
+  }
+  #category {
+    font-size: 19px;
+  }
+  #save {
+    font-size: 24px;
+  }
+  #photo-label {
+    font-size: 19px;
+  }
+}
 @media screen and (max-width: 1200px) {
   .custom-main {
     grid-template-columns: 50% 5% 40%;
     margin: 140px 0 0px 0;
   }
-  .product-category > h3 {
-    font-size: 28px;
-  }
-  #photo-label {
-    font-size: 19px;
-  }
   .label-span {
     font-size: 16px;
-  }
-  .categories > span {
-    font-size: 22px;
-  }
-  #save {
-    font-size: 28px;
-    padding: 12px 0px;
   }
 }
 @media screen and (max-width: 992px) {
@@ -2201,7 +2249,7 @@ h2 {
 }
 
 header {
-  box-shadow: 0 5px 20px #000;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.226);
   transform: translateY(-150px);
   animation: headerShow 0.6s linear 1 forwards;
 }
@@ -2468,9 +2516,6 @@ footer {
   .footer-elements > div > span > a {
     font-size: 22px;
   }
-  .footer-elements > h5 {
-    font-size: 22px;
-  }
 }
 @media screen and (max-width: 992px) {
   .header-elem {
@@ -2507,9 +2552,6 @@ footer {
     font-size: 32px;
   }
   .footer-elements > div > span > a {
-    font-size: 20px;
-  }
-  .footer-elements > h5 {
     font-size: 20px;
   }
 }
@@ -2655,7 +2697,7 @@ h2 {
 }
 
 header {
-  box-shadow: 0 5px 20px #000;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.226);
   transform: translateY(-150px);
   animation: headerShow 0.6s linear 1 forwards;
 }
@@ -2922,9 +2964,6 @@ footer {
   .footer-elements > div > span > a {
     font-size: 22px;
   }
-  .footer-elements > h5 {
-    font-size: 22px;
-  }
 }
 @media screen and (max-width: 992px) {
   .header-elem {
@@ -2961,9 +3000,6 @@ footer {
     font-size: 32px;
   }
   .footer-elements > div > span > a {
-    font-size: 20px;
-  }
-  .footer-elements > h5 {
     font-size: 20px;
   }
 }
@@ -3075,6 +3111,626 @@ footer {
   }
   .text-create-new-pass {
     font-size: 24px;
+  }
+}
+.custom-container {
+  max-width: 1420px;
+  margin: auto;
+  align-items: center;
+}
+
+.layout {
+  display: grid;
+  grid-template-columns: 2fr 2fr 4fr 1fr;
+}
+
+.custom-phone-box {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  right: 0;
+  z-index: -100;
+  gap: 10px;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.custom-phone-box.custom-hidden {
+  opacity: 0;
+  display: none;
+}
+
+.expand-elements {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  position: relative;
+}
+
+.custom-header-elem__search {
+  display: flex;
+  position: absolute;
+  left: 10px;
+  align-items: center;
+  position: relative;
+  transition: flex-grow 0.3s ease, width 0.3s ease;
+}
+
+.custom-header-elem__search input {
+  border: 2px solid #00317d;
+  border-radius: 50px;
+  padding: 15px 30px 15px 10px;
+  width: 350px;
+  transition: width 0.3s ease;
+}
+
+.custom-header-elem__search i {
+  position: absolute;
+  right: 10px;
+  color: #00317d;
+  font-size: 24px;
+}
+
+/* Expand search bar on focus */
+.custom-header-elem__search input:focus {
+  width: 37vw; /* Adjust this based on your layout */
+}
+
+.custom-header-elem {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.custom-header-elem__logo {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.custom-header-elem__logo > img {
+  width: 105px;
+  height: 110px;
+}
+.custom-header-elem__btn {
+  position: relative;
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px 22px;
+  border-radius: 60px;
+  border: 2px solid #00317d;
+  font-size: 32px;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  color: #00317d;
+  background: transparent;
+  overflow: hidden;
+  transition: background-color 0.3s, color 0.3s;
+}
+.custom-header-elem__btn > span {
+  font-size: 24px;
+}
+.custom-header-elem__btn:hover {
+  color: white;
+}
+.custom-header-elem__btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  left: unset;
+  right: 0;
+  border-radius: 60px;
+  width: 0%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+  transition: 0.4s all ease-in-out 0s;
+}
+.custom-header-elem__btn:hover::before {
+  left: 0;
+  right: unset;
+  width: 100%;
+}
+.custom-header-elem__btn:hover .bx {
+  transition: color 0.3s;
+}
+
+.custom-company {
+  font-size: 24px;
+  color: #000;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+}
+
+.custom-phone-box {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.custom-phone-box__icon {
+  height: 48px;
+  width: 48px;
+}
+.custom-phone-box__numbers {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.custom-phone-box__numbers > a {
+  font-size: 24px;
+  color: #000;
+  font-family: "Montserrat", sans-serif;
+}
+
+.custom-two-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.custom-translate-btn {
+  padding: 15px 16px;
+  position: relative;
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 60px;
+  border: 2px solid #00317d;
+  font-size: 24px;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  color: #00317d;
+  background: transparent;
+  overflow: hidden;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.custom-translate-btn:hover {
+  color: white;
+}
+
+.custom-translate-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  left: unset;
+  right: 0;
+  border-radius: 60px;
+  width: 0%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+  transition: 0.4s all ease-in-out 0s;
+}
+
+.custom-translate-btn:hover::before {
+  left: 0;
+  right: unset;
+  width: 100%;
+}
+
+.bx {
+  padding: 15px 0px;
+  font-size: 32px;
+}
+
+.top-sales-box {
+  margin-top: 100px;
+  display: flex;
+  grid-column: 2/4;
+  flex-direction: column;
+  width: 100%;
+  gap: 20px;
+  margin-bottom: 200px;
+}
+.top-sales-box > h1 {
+  font-size: 40px;
+  color: #000;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  padding-left: 70px;
+}
+
+.top-sales-cards {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.top-prod-card {
+  display: flex;
+  border-radius: 20px;
+  gap: 15px;
+  background-color: white;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.226);
+  width: 90%;
+  padding: 15px;
+}
+
+.top-prod-descr {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 100%;
+}
+
+.top-two-elements {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.top-two-elements > h2 {
+  font-size: 32px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+}
+
+.custom-add-to-basket-btn {
+  position: relative;
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px 15px;
+  border-radius: 20px;
+  border: 2px solid #00317d;
+  font-size: 24px;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  color: #00317d;
+  background: transparent;
+  overflow: hidden;
+  z-index: 1;
+  transition: background-color 0.3s, color 0.3s;
+}
+.custom-add-to-basket-btn i {
+  padding: 15px 0px;
+  font-size: 32px;
+}
+.custom-add-to-basket-btn span {
+  font-size: 24px;
+}
+.custom-add-to-basket-btn:hover {
+  color: #ffffff;
+}
+.custom-add-to-basket-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  left: unset;
+  right: 0;
+  border-radius: 15px;
+  width: 0%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+  transition: 0.4s all ease-in-out 0s;
+}
+.custom-add-to-basket-btn:hover::before {
+  left: 0;
+  right: unset;
+  width: 100%;
+}
+.custom-add-to-basket-btn:hover .bx {
+  transition: color 0.3s;
+}
+
+.custom-filter {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 22%;
+  position: fixed;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.226);
+  font-family: "Montserrat", sans-serif;
+}
+.custom-filter h2 {
+  color: #00317d;
+  margin-bottom: 20px;
+  font-size: 32px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  color: #000;
+}
+.custom-filter span {
+  display: block;
+  margin-bottom: 20px;
+}
+.custom-filter span h4 {
+  color: #555555;
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+.custom-filter span input[type=number] {
+  width: 100%;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 20px;
+  border-radius: 4px;
+  font-family: "Montserrat", sans-serif;
+}
+.custom-filter span input[type=number]:focus {
+  border: 2px solid #00317d;
+}
+.custom-filter .custom-input-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.custom-filter .custom-input-wrapper .custom-input-suffix {
+  position: absolute;
+  right: 10px;
+  color: #555555;
+  font-family: "Montserrat", sans-serif;
+}
+.custom-filter .custom-filter-price,
+.custom-filter .custom-filter-deadline {
+  display: flex;
+  align-items: center;
+}
+.custom-filter .custom-filter-price .custom-filter-line,
+.custom-filter .custom-filter-deadline .custom-filter-line {
+  width: 20px;
+  height: 1px;
+  background-color: #00317d;
+  margin: 0 10px;
+}
+.custom-filter .custom-filter-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.custom-filter .custom-filter-buttons .custom-btn {
+  padding: 10px 20px;
+  border: 2px solid #00317d;
+  border-radius: 60px;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  color: #00317d;
+  background: transparent;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  overflow: hidden;
+  position: relative;
+}
+.custom-filter .custom-filter-buttons .custom-btn:hover {
+  color: #ffffff;
+}
+.custom-filter .custom-filter-buttons .custom-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  left: unset;
+  right: 0;
+  border-radius: 60px;
+  width: 0%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+  transition: 0.4s all ease-in-out 0s;
+}
+.custom-filter .custom-filter-buttons .custom-btn:hover::before {
+  left: 0;
+  right: unset;
+  width: 100%;
+}
+
+@keyframes headerShow {
+  to {
+    transform: translateY(0px);
+  }
+}
+@media (max-width: 1880px) {
+  .custom-header-elem__search input:focus {
+    width: 40vw;
+  }
+}
+@media (max-width: 1720px) {
+  .custom-container {
+    max-width: 1400px;
+  }
+  .custom-header-elem__search input:focus {
+    width: 40vw;
+  }
+}
+@media (max-width: 1600px) {
+  .custom-container {
+    max-width: 1140px;
+  }
+  .custom-header-elem__search input {
+    width: 270px;
+  }
+  .custom-header-elem__search input:focus {
+    width: 38vw;
+  }
+  .custom-header-elem {
+    height: 130px;
+  }
+  .custom-header-elem__btn {
+    font-size: 19px;
+  }
+  .custom-header-elem__btn > span {
+    display: none;
+  }
+  .custom-company {
+    display: none;
+  }
+}
+@media (max-width: 1370px) {
+  .custom-header-elem {
+    height: 130px;
+  }
+  .custom-header-elem__btn {
+    font-size: 19px;
+  }
+  .custom-header-elem__btn > span {
+    display: none;
+  }
+  .custom-header-elem__search input {
+    width: 240px;
+  }
+  .custom-header-elem__search input:focus {
+    width: 44vw;
+  }
+  .custom-phone-box {
+    right: 20px;
+  }
+  .custom-phone-box__numbers > a {
+    display: block;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .custom-container {
+    max-width: 990px;
+  }
+  .custom-header-elem {
+    height: 130px;
+  }
+  .custom-header-elem__btn {
+    font-size: 19px;
+  }
+  .expand-elements {
+    align-items: center;
+  }
+  .custom-header-elem__search input {
+    width: 200px;
+  }
+  .custom-header-elem__search input:focus {
+    width: 40vw;
+  }
+  .custom-header-elem__logo > img {
+    width: 95px;
+    height: 100px;
+  }
+  .custom-header-elem__btn {
+    font-size: 22px;
+    padding: 0px 20px;
+  }
+  .custom-company {
+    font-size: 22px;
+    display: block;
+  }
+  .custom-phone-box__icon {
+    height: 40px;
+    width: 40px;
+  }
+  .custom-phone-box__numbers > a {
+    font-size: 20px;
+  }
+  footer {
+    height: 750px;
+  }
+  .footer-elements > div > span > h3 {
+    font-size: 36px;
+  }
+  .footer-elements > div > span > a {
+    font-size: 22px;
+  }
+}
+@media screen and (max-width: 992px) {
+  .custom-header-elem {
+    height: 110px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+  .custom-header-elem__logo {
+    gap: 15px;
+  }
+  .custom-header-elem__logo > img {
+    width: 85px;
+    height: 90px;
+  }
+  .custom-header-elem__btn {
+    font-size: 20px;
+    padding: 16px 18px;
+  }
+  .custom-company {
+    font-size: 20px;
+  }
+  .custom-phone-box__icon {
+    height: 35px;
+    width: 35px;
+  }
+  .custom-phone-box__numbers > a {
+    font-size: 20px;
+  }
+  footer {
+    height: 650px;
+  }
+  .footer-elements > div > span > h3 {
+    font-size: 32px;
+  }
+  .footer-elements > div > span > a {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .custom-header-elem {
+    height: 100px;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+  }
+  .custom-header-elem__logo {
+    gap: 10px;
+  }
+  .custom-header-elem__logo > img {
+    width: 75px;
+    height: 80px;
+  }
+  .custom-header-elem__btn {
+    font-size: 18px;
+    padding: 14px 16px;
+  }
+  .custom- company {
+    font-size: 18px;
+  }
+  .custom-phone-box {
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+  }
+  .custom-phone-box__numbers {
+    align-items: center;
+    text-align: center;
+  }
+  footer {
+    height: 550px;
+  }
+  .footer-elements {
+    padding-top: 400px;
+  }
+  .footer-elements > div {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 15px;
+  }
+  .footer-elements > div > span {
+    width: auto;
+    padding-left: 0;
+  }
+  .footer-elements > div > a {
+    border-right: none;
+  }
+  .footer-elements > div > span > h3 {
+    font-size: 28px;
+  }
+  .footer-elements > div > span > a {
+    font-size: 18px;
+  }
+  .footer-elements > h5 {
+    font-size: 18px;
   }
 }
 @font-face {
