--- a/sass/_seller-edit.scss
+++ b/sass/_seller-edit.scss
@@ -6,23 +6,33 @@ $second-family: "Inter", sans-serif;
 // $Cunia-family: "Cunia", sans-serif;
 
 .seller-profile {
-  margin-top: 75px;
-  flex-direction: column;
+  max-width: 1420px;
+  margin: auto;
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 50px;
+  & > div {
+    width: 80%;
+    margin-bottom: 250px;
+    & > div {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 
 .add-items {
+  margin-top: 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 2px solid #00317d;
   border-radius: 20px;
   width: 413px;
-  padding: 15px 77px;
+  padding: 15px 0px;
   gap: 20px;
-
+  margin-bottom: 100px;
   & > img {
     width: 90px;
     height: 90px;
@@ -38,6 +48,10 @@ $second-family: "Inter", sans-serif;
   }
 }
 
+.product-image {
+  object-fit: fill;
+}
+
 .active-items {
   & > h3 {
     font-size: 40px;
@@ -51,25 +65,27 @@ $second-family: "Inter", sans-serif;
 #items {
   display: flex;
   flex-direction: column;
+
   gap: 23px;
 }
 
 .items-card {
   display: flex;
+  box-shadow: 0 0px 15px #6b6b6b;
+  width: 100%;
+  border-radius: 17px;
 }
 
 .items-info {
   display: flex;
+  width: 100%;
+  gap: 10px;
   flex-direction: row;
-  border: 2px solid #00317d;
-  border-radius: 17px;
-  & > img {
-    padding: 15px;
-  }
 }
 
 .items-details {
   display: flex;
+  width: 100%;
   flex-direction: column;
   padding: 15px 0px;
   & > h3 {
@@ -81,8 +97,7 @@ $second-family: "Inter", sans-serif;
 
 .item-details_box {
   padding: 30px 10px 20px 0px;
-  width: 360px;
-  height: 234px;
+
   & > p {
     display: flex;
     padding: 5px;
@@ -105,7 +120,7 @@ $second-family: "Inter", sans-serif;
   align-items: center;
   gap: 20px;
   padding-inline: 10px;
-  width: 100%;
+  width: 15%;
   & > button {
     padding: 15px 20px;
     font-size: 24px;
@@ -116,6 +131,10 @@ $second-family: "Inter", sans-serif;
 }
 
 #edit {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  align-items: center;
   background: linear-gradient(to bottom, #17bff0, #00317d);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -135,7 +154,48 @@ $second-family: "Inter", sans-serif;
 }
 
 #delete {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
   background: red;
   border: none;
+  cursor: pointer;
+}
+
+@media (max-width: 1720px) {
+  .seller-profile > div {
+    margin-bottom: 100px;
+  }
+  .add-items {
+    margin-bottom: 50px;
+    & > img {
+      width: 80px;
+      height: 80px;
+    }
+    & > p {
+      font-size: 24px;
+    }
+  }
+
+  .active-items {
+    & > h3 {
+      font-size: 32px;
+    }
+  }
+  .items-details {
+    padding: 10px 0px;
+  }
+  #edit,
+  #delete {
+    font-size: 20px;
+    gap: 2px;
+    & > i {
+      font-size: 20px;
+    }
+  }
+
+  .items-btn > button {
+    padding: 5px;
+  }
 }
