--- a/css/style.css
+++ b/css/style.css
@@ -3150,6 +3150,7 @@ footer {
   display: flex;
   position: absolute;
   left: 10px;
+  background-color: white;
   align-items: center;
   position: relative;
   transition: flex-grow 0.3s ease, width 0.3s ease;
@@ -3188,7 +3189,7 @@ footer {
   gap: 20px;
 }
 .custom-header-elem__logo > img {
-  width: 105px;
+  width: 80px;
   height: 110px;
 }
 .custom-header-elem__btn {
@@ -3427,6 +3428,7 @@ footer {
   border-radius: 8px;
   width: 22%;
   position: fixed;
+  top: 155px;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.226);
   font-family: "Montserrat", sans-serif;
 }
@@ -3458,6 +3460,15 @@ footer {
 }
 .custom-filter span input[type=number]:focus {
   border: 2px solid #00317d;
+}
+.custom-filter .filter-h2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.custom-filter #close-icon {
+  background: transparent;
+  border: none;
 }
 .custom-filter .custom-input-wrapper {
   position: relative;
@@ -3531,7 +3542,7 @@ footer {
 }
 @media (max-width: 1880px) {
   .custom-header-elem__search input:focus {
-    width: 40vw;
+    width: 41vw;
   }
 }
 @media (max-width: 1720px) {
@@ -3539,7 +3550,7 @@ footer {
     max-width: 1400px;
   }
   .custom-header-elem__search input:focus {
-    width: 40vw;
+    width: 41vw;
   }
 }
 @media (max-width: 1600px) {
@@ -3550,7 +3561,7 @@ footer {
     width: 270px;
   }
   .custom-header-elem__search input:focus {
-    width: 38vw;
+    width: 40vw;
   }
   .custom-header-elem {
     height: 130px;
@@ -3563,6 +3574,36 @@ footer {
   }
   .custom-company {
     display: none;
+  }
+  .custom-filter {
+    top: 135px;
+  }
+}
+@media screen and (max-width: 1490px) {
+  .custom-header-elem__search input:focus {
+    width: 44vw;
+  }
+  .custom-phone-box {
+    right: 60px;
+  }
+  .custom-phone-box__numbers > a {
+    font-size: 20px;
+  }
+  input[type=number] {
+    font-size: 16px;
+  }
+  .top-sales-box > h1 {
+    font-size: 32px;
+  }
+  .top-two-elements > h2 {
+    font-size: 24px;
+  }
+  .custom-add-to-basket-btn {
+    font-size: 20px;
+    padding: 0px 10px;
+  }
+  .custom-filter {
+    top: 140px;
   }
 }
 @media (max-width: 1370px) {
@@ -3587,6 +3628,34 @@ footer {
   .custom-phone-box__numbers > a {
     display: block;
   }
+  .top-sales-box {
+    margin-top: 50px;
+    margin-bottom: 100px;
+  }
+  .top-two-elements > h2 {
+    font-size: 20px;
+  }
+  .custom-add-to-basket-btn {
+    font-size: 16px;
+    padding: 0px 5px;
+  }
+  .custom-filter {
+    padding: 10px;
+    top: 130px;
+  }
+  .custom-filter > h2 {
+    margin-bottom: 0px;
+  }
+  .custom-filter > span > h4 {
+    font-size: 16px;
+  }
+  .filter-h2 > h2 {
+    font-size: 24px;
+  }
+  .custom-phone-box__icon {
+    height: 40px;
+    width: 40px;
+  }
 }
 @media screen and (max-width: 1200px) {
   .custom-container {
@@ -3605,7 +3674,10 @@ footer {
     width: 200px;
   }
   .custom-header-elem__search input:focus {
-    width: 40vw;
+    width: 42vw;
+  }
+  .custom-phone-box {
+    right: 10px;
   }
   .custom-header-elem__logo > img {
     width: 95px;
@@ -3619,12 +3691,23 @@ footer {
     font-size: 22px;
     display: block;
   }
+  .custom-filter > span > h4 {
+    font-size: 16px;
+  }
+  .filter-h2 > h2 {
+    font-size: 24px;
+  }
   .custom-phone-box__icon {
     height: 40px;
     width: 40px;
   }
-  .custom-phone-box__numbers > a {
-    font-size: 20px;
+  .custom-filter-deadline,
+  .custom-filter-price {
+    flex-direction: column;
+    gap: 5px;
+  }
+  .custom-filter-line {
+    display: none;
   }
   footer {
     height: 750px;
